Fix header on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,6 +24,15 @@ section {
 	section {
 		width: auto;
 	}
+	.container {
+		width: auto;
+	}
+	
+	header {
+		img {
+			display: none;
+		}
+	}
 }
 
 body {
